# dsed-py

./: README.md  pyproject.toml  requirements.txt  setup.py
doc/: ds-in-ow.md
dsed/: __init__.py  build_plugins_xml.py  common.py  compare_results.py  const.py  gbr.py  migrate.py  ow.py  prep_dashboard.py  preprocessors.py  queries.py  regression_test.py  stats.py  util.py
dsed/migrate/: __init__.py  build.py  compare.py  const.py  extract.py
dsed/ow/: __init__.py  clip.py  musle.py  reporting.py  standard_reports.py  structure.py
dsed/post/: __init__.py  back_calculate.py  massbalance.py  moriasi.py  regional.py  regional_contributor.py  report_card.py  streambank.py
dsed/pre/: __init__.py  apsim_timeseries.py  area_weighted.py  cropping_const.py  howleaky_timeseries.py  runoff_adjust.py  usle.py
dsed/testing/: general.py  migration.py  preprocessors.py  simulation.py
